[package]
name = "async-openai-assistants-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.16.2"
crossterm = "0.27.0"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.17"
